// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<MessageText /> > should render with a custom inner class when one is set 1`] = `
<div>
  <div
    class="str-chat__message str-chat__message--regular str-chat__message--received str-chat__message--has-text str-chat__message--other"
  >
    <div
      class="str-chat__message-inner"
      data-testid="message-inner"
    >
      <div
        data-testid="mocked-message-actions"
      />
      <div
        class="str-chat__message-bubble"
      >
        <div
          class="str-chat__message-text"
          tabindex="0"
        >
          <div
            class=""
            data-testid="message-text-inner-wrapper"
          >
            <div>
              <p>
                hi mate
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="str-chat__message-reactions-host"
      />
      <div
        class="str-chat__message-error-indicator"
      >
        <div
          class="str-chat__badge str-chat__badge--variant-error str-chat__badge--size-sm"
        >
          <svg
            class="str-chat__icon str-chat__icon--exclamation"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(6.2222 0) scale(1.7778)"
            >
              <path
                d="M0 7.5C0 6.9477 0.4477 6.5 1 6.5C1.5523 6.5 2 6.9477 2 7.5C1.99989 8.05211 1.55223 8.5 1 8.5C0.447768 8.5 0.000110293 8.05211 0 7.5Z"
              />
              <path
                d="M0.25 0.75C0.25 0.33578 0.5858 0 1 0C1.4142 0 1.75 0.33578 1.75 0.75V4.75C1.74989 5.16411 1.41413 5.5 1 5.5C0.585868 5.5 0.25011 5.16411 0.25 4.75V0.75Z"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="str-chat__message-metadata"
    />
  </div>
</div>
`;

exports[`<MessageText /> > should render with a custom wrapper class when one is set 1`] = `
<div>
  <div
    class="str-chat__message str-chat__message--regular str-chat__message--received str-chat__message--has-text str-chat__message--other"
  >
    <div
      class="str-chat__message-inner"
      data-testid="message-inner"
    >
      <div
        data-testid="mocked-message-actions"
      />
      <div
        class="str-chat__message-bubble"
      >
        <div
          class="str-chat__message-text"
          tabindex="0"
        >
          <div
            class=""
            data-testid="message-text-inner-wrapper"
          >
            <div>
              <p>
                hello world
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="str-chat__message-reactions-host"
      />
      <div
        class="str-chat__message-error-indicator"
      >
        <div
          class="str-chat__badge str-chat__badge--variant-error str-chat__badge--size-sm"
        >
          <svg
            class="str-chat__icon str-chat__icon--exclamation"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(6.2222 0) scale(1.7778)"
            >
              <path
                d="M0 7.5C0 6.9477 0.4477 6.5 1 6.5C1.5523 6.5 2 6.9477 2 7.5C1.99989 8.05211 1.55223 8.5 1 8.5C0.447768 8.5 0.000110293 8.05211 0 7.5Z"
              />
              <path
                d="M0.25 0.75C0.25 0.33578 0.5858 0 1 0C1.4142 0 1.75 0.33578 1.75 0.75V4.75C1.74989 5.16411 1.41413 5.5 1 5.5C0.585868 5.5 0.25011 5.16411 0.25 4.75V0.75Z"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="str-chat__message-metadata"
    />
  </div>
</div>
`;

exports[`<MessageText /> > should render with custom theme identifier in generated css classes when theme is set 1`] = `
<div>
  <div
    class="str-chat__message str-chat__message--regular str-chat__message--received str-chat__message--has-text str-chat__message--other"
  >
    <div
      class="str-chat__message-inner"
      data-testid="message-inner"
    >
      <div
        data-testid="mocked-message-actions"
      />
      <div
        class="str-chat__message-bubble"
      >
        <div
          class="str-chat__message-text"
          tabindex="0"
        >
          <div
            class=""
            data-testid="message-text-inner-wrapper"
          >
            <div>
              <p>
                whatup?!
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="str-chat__message-reactions-host"
      />
      <div
        class="str-chat__message-error-indicator"
      >
        <div
          class="str-chat__badge str-chat__badge--variant-error str-chat__badge--size-sm"
        >
          <svg
            class="str-chat__icon str-chat__icon--exclamation"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(6.2222 0) scale(1.7778)"
            >
              <path
                d="M0 7.5C0 6.9477 0.4477 6.5 1 6.5C1.5523 6.5 2 6.9477 2 7.5C1.99989 8.05211 1.55223 8.5 1 8.5C0.447768 8.5 0.000110293 8.05211 0 7.5Z"
              />
              <path
                d="M0.25 0.75C0.25 0.33578 0.5858 0 1 0C1.4142 0 1.75 0.33578 1.75 0.75V4.75C1.74989 5.16411 1.41413 5.5 1 5.5C0.585868 5.5 0.25011 5.16411 0.25 4.75V0.75Z"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="str-chat__message-metadata"
    />
  </div>
</div>
`;
